# chess-expertise-2024

./: .current_cleanup_branch  .gitignore  01_nifti-to-BIDS.m  01_nii2BIDS.m  02_behavioural-to-BIDS.m  03_spm-GLM-auto-contrast.m  05_RSAGLM_HCPMMP1.m  06_plot-MVPA-results-HCPMMP1.py  AGENTS.md  API.md  DATASET.md  LICENSE  README.md  STEPS.txt  common_utils.py  config.py  logging_utils.py  meta.py  plot_brain_data.py  pyproject.toml  requirements.txt  run_behavioural_intercorr.py  run_behavioural_main.py  run_behavioural_splithalf.py  run_glm_rsa.py  run_glm_univ.py  run_mvpa_barplots.py  run_mvpa_surfplots.py  run_mvpa_ttests.py  run_neurosynth_rsa.py  run_neurosynth_univ.py  run_pr_participation_ratio.py  s01_nii2BIDS.m  s02_bh2BIDS.m  s05_RSAGLM_HCPMMP1.m  s06_plot-MVPA-results-HCPMMP1.py  viz_utils.py
behavioural/: README.md  bh_familiarization_data_cleaning.py  bh_fmri.py  bh_fmri_splithalf.py
chess-behavioural/: bh_familiarization_data_cleaning.py  bh_familiarization_data_plotting.py  bh_fmri.py  bh_fmri_intercorr.py  bh_fmri_splithalf.py
chess-dataset-vis/: README.md  barplot-manim.py  plot_rdms.py  rdms_intercorr.py  rdms_intercorr_checkmate_boards.py  visualize_dataset.py  visualize_manifold.py
chess-dnn/: README.md  alphavile_extract_activations.py  alphavile_pca.py  alphavile_perform_rsa.py  alphavile_perform_rsatoolbox.py  alphavile_pr.py  data-view.py  mvpa_plotly.py  plot_mds.py  untitle0.py  untitled1.py
chess-glm/: RSA_TwoSample_SecondLevel_MultiContrast.m  TwoSample_SecondLevel_MultiContrast.m  WithinGroup_SecondLevel_MultiContrast.m  roi_ttests_all.py  run_subject_glm.m  s03_spmGLMautoContrast.m
chess-manifold/: main.py
chess-manifoldMFT/: MFTMA_VGG16_example.py  README.md  main.py  main_dnn.py  main_noavg.py
chess-mvpa/: WithinGroup_SecondLevel_MultiContrast.m  manifold.py  mvpa-group-python.py  (+18 more)
(+442 files in other folders)
