[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-expertise"
version = "0.1.0"
description = "Analysis tools for the Chess Expertise project"
authors = [{name="Chess Expertise Team"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "nibabel",
    "nilearn",
    "scikit-learn",
    "statsmodels",
    "pingouin",
    "natsort",
    "pillow",
    "python-chess"
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "mvpa",
    "fmri_glm",
    "behavioural",
    "neurosynth",
    "manifold",
    "rois",
]

[tool.setuptools.package-dir]
mvpa = "mvpa"
fmri_glm = "fmri_glm"
behavioural = "behavioural"
neurosynth = "neurosynth"
manifold = "manifold"
rois = "rois"
